Criando e Removendo mosquitos a cada ciclo de tempo

--- a/src/app.html
+++ b/src/app.html
@@ -21,7 +21,11 @@
     <body onresize="ajustaTamanhoPalcoJogo()">
 
         <script>
-            posicaoRandomica();
+
+            setInterval(function() {
+                posicaoRandomica();
+            }, 1000);
+
         </script>
 
         <!-- Optional JavaScript -->
