--- a/src/app.html
+++ b/src/app.html
@@ -19,13 +19,25 @@
 	</head>
 
     <body onresize="ajustaTamanhoPalcoJogo()">
+        
+        <!-- Início painel -->
+        <div class="painel">
+            <div class="vidas">
+                <img src="img/coracao_vazio.png">
+                <img src="img/coracao_cheio.png">
+                <img src="img/coracao_cheio.png">
+            </div>
+
+            <div class="cronometro">
+                Tempo restante: ?
+            </div>
+        </div>
+        <!-- Fim painel -->
 
         <script>
-
             setInterval(function() {
                 posicaoRandomica();
             }, 1000);
-
         </script>
 
         <!-- Optional JavaScript -->
