--- a/src/app.html
+++ b/src/app.html
@@ -23,9 +23,9 @@
         <!-- Início painel -->
         <div class="painel">
             <div class="vidas">
-                <img src="img/coracao_vazio.png">
-                <img src="img/coracao_cheio.png">
-                <img src="img/coracao_cheio.png">
+                <img id="v1" src="img/coracao_cheio.png">
+                <img id="v2" src="img/coracao_cheio.png">
+                <img id="v3" src="img/coracao_cheio.png">
             </div>
 
             <div class="cronometro">
@@ -37,7 +37,7 @@
         <script>
             setInterval(function() {
                 posicaoRandomica();
-            }, 1000);
+            }, 2000);
         </script>
 
         <!-- Optional JavaScript -->
