--- a/src/app.html
+++ b/src/app.html
@@ -29,13 +29,15 @@
             </div>
 
             <div class="cronometro">
-                Tempo restante: ?
+                Tempo restante: <span id="cronometro"></span>
             </div>
         </div>
         <!-- Fim painel -->
 
         <script>
-            setInterval(function() {
+            document.getElementById("cronometro").innerHTML = tempo;
+
+            var criaMosquito = setInterval(function() {
                 posicaoRandomica();
             }, 2000);
         </script>
