Níveis de dificuldade do jogo

--- a/src/app.html
+++ b/src/app.html
@@ -39,7 +39,7 @@
 
             var criaMosquito = setInterval(function() {
                 posicaoRandomica();
-            }, 2000);
+            }, criaMosquitoTempo);
         </script>
 
         <!-- Optional JavaScript -->
