--- a/src/index.html
+++ b/src/index.html
@@ -18,12 +18,12 @@
                 function iniciarJogo() {
                     var nivel = document.getElementById("nivel").value;
 
-                    if(nivel==="") {
+                    if (nivel==="") {
                         alert("Selecione um nível para iniciar o jogo");
                         return false;
                     }
 
-                    alert(nivel);
+                    window.location.href = "app.html?" + nivel;
                 }
             </script>
 
