--- a/src/victory.html
+++ b/src/victory.html
@@ -12,7 +12,7 @@
             <!-- Custom Style CSS -->
             <link rel="stylesheet" type="text/css" href="css/style.css">
     
-            <title></title>
+            <title>Jogo - Mata Mosquito</title>
         </head>
     
         <body>
@@ -29,7 +29,7 @@
                 <div class="row">
                     <div class="col">
                         <div class="d-flex justify-content-center">
-                            <button type="button" class="btn btn-dark btn-lg" onclick="window.location.href = 'app.html' ">
+                            <button type="button" class="btn btn-dark btn-lg" onclick="window.location.href = 'index.html' ">
                                 Reiniciar
                             </button>
                         </div>
