--- a/src/app.html
+++ b/src/app.html
@@ -15,7 +15,7 @@
         <!-- JavaScript -->
         <script src="js/game.js"></script>
 
-        <title></title>
+        <title>Jogo - Mata Mosquito</title>
 	</head>
 
     <body onresize="ajustaTamanhoPalcoJogo()">
