--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
             <!-- Custom Style CSS -->
             <link rel="stylesheet" type="text/css" href="css/style.css">
     
-            <title></title>
+            <title>Jogo - Mata Mosquito</title>
 
             <script>
                 function iniciarJogo() {
